<resources>
<!--    for navigation arguments-->
    <string name="nav_arg_to_pie_int" translatable="false">nav_arg_to_pie_int</string>
    <string name="nav_arg_to_pie_string" translatable="false">nav_arg_to_pie_string</string>

    <string name="nav_arg_to_oreo_int" translatable="false">nav_arg_to_oreo_int</string>
    <string name="nav_arg_to_oreo_string" translatable="false">nav_arg_to_oreo_string</string>

    <string name="nav_arg_to_nougat_int" translatable="false">nav_arg_to_nougat_int</string>
    <string name="nav_arg_to_nougat_string" translatable="false">nav_arg_to_nougat_string</string>

    <string name="app_name">t4tek</string>
</resources>