<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/pieFragment">

    <fragment
        android:id="@+id/pieFragment"
        android:name="com.android.t4tek.app.main.pie.PieFragment"
        android:label="fragment_pie"
        tools:layout="@layout/fragment_pie">
        <action
            android:id="@+id/action_pieFragment_to_oreoFragment"
            app:destination="@id/oreoFragment" />
        <action
            android:id="@+id/action_pieFragment_to_nougatFragment"
            app:destination="@id/nougatFragment" />

        <argument
            android:name="@string/nav_arg_to_pie_int"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="@string/nav_arg_to_pie_string"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/oreoFragment"
        android:name="com.android.t4tek.app.main.oreo.OreoFragment"
        android:label="fragment_oreo"
        tools:layout="@layout/fragment_oreo">

        <argument
            android:name="@string/nav_arg_to_oreo_int"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="@string/nav_arg_to_oreo_string"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_oreoFragment_to_nougatFragment"
            app:destination="@id/nougatFragment" />
    </fragment>
    <fragment
        android:id="@+id/nougatFragment"
        android:name="com.android.t4tek.app.main.nougat.NougatFragment"
        android:label="fragment_nougat"
        tools:layout="@layout/fragment_nougat">

        <argument
            android:name="@string/nav_arg_to_nougat_int"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="@string/nav_arg_to_nougat_string"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_nougatFragment_to_pieFragment"
            app:destination="@id/pieFragment" />
    </fragment>
</navigation>